--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="https://museumwolfenbuettel.github.io/Die-Stadt-im-Jahr-1747/" class="button small-button">5</a>
             
             <!-- Кнопка 6, ведущая на следующую страницу -->
-            <a href="https://museumwolfenbuettel.github.io/Buerger-Museum/" class="button">6</a>
+            <a href="https://museumwolfenbuettel.github.io/schwimmen/" class="button">6</a>
         </div>
 
         <!-- Логотип под кнопками -->
