--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wasserwege</title>
+    <title>5.Wasserwege</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,7 +57,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Wasserwege</h1>
+        <h1>5.Wasserwege</h1>
         
         <!-- Аудиоплеер для файла Wasserwege -->
         <audio controls controlslist="nodownload">
